removed redundant endpoints and logic - createRelationship now handles reactivation of soft-deleted relations